Fixed issue in IE7 where width of calendar was not taking into account the width of the vertical scrollbar, causing a horizontal scrollbar to appear

--- a/jquery.weekcalendar/jquery.weekcalendar.css
+++ b/jquery.weekcalendar/jquery.weekcalendar.css
@@ -56,6 +56,8 @@
 
 .calendar-scrollable-grid {
 	overflow: auto;
+	overflow-x: hidden !important;
+	overflow-y: auto !important; 
 	position: relative;
 	background-color: #fff;
 	width: 100%;
